# simpli-core

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/simpli_core/: __init__.py  auth.py  cli.py  config.py  errors.py  fastapi.py  llm.py  logging.py  models.py  prompt_context.py  service_client.py  settings.py  supabase.py  usage.py
src/simpli_core/connectors/: __init__.py  base.py  errors.py  field_config.py  file_parser.py  freshdesk.py  hubspot.py  ingest.py  intercom.py  jira.py  mapping.py  registry.py  salesforce.py  servicenow.py  settings.py  setup_router.py  zendesk.py
src/simpli_core/webhooks/: __init__.py  router.py  signatures.py
tests/: conftest.py  test_app.py  test_auth_errors.py  test_cli.py  test_config.py  test_connectors.py  test_connectors_base.py  test_connectors_platforms.py  test_ingest_router.py  test_logging.py  test_settings.py  test_usage.py  test_webhooks.py
