[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpli-core"
version = "0.7.0"
description = "Shared SDK with common models, auth helpers, and integration utilities for the Simpli Support product family"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28,<1.0",
    "pydantic[email]>=2.10,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "structlog>=24.4,<26.0",
    "typer>=0.15,<1.0",
]

[project.optional-dependencies]
redis = ["redis>=5.2"]
salesforce = ["simple-salesforce>=1.12"]
excel = ["openpyxl>=3.1"]
parquet = ["pyarrow>=14"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
    "types-redis>=4.6",
    "fastapi>=0.115",
    "simple-salesforce>=1.12",
    "openpyxl>=3.1",
    "pyarrow>=14",
]

[project.scripts]
simpli-core = "simpli_core.cli:app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "A", "C4", "PT", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
